--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -1,4 +1,6 @@
 
+就认准一条：永不放弃。马斯克每取得一个新的成就，就加深一层。  
+
 拥有极强的执行力，一直是我的最高理想。现在的表现超出了我想象之中能达到的最完美的状态。    
 
 是有效的，只要自己想起来就能做成，所以肯定是有效的。  
@@ -16,8 +18,6 @@
 自制力、执行力、意志力全都有了，而且是以一种极其轻松的方式实现的。  
 
 原理：如果能画一个格子，就能画两个、三个、九个，然后一千个、一万个、一百万个  
-
-**这种方法的核心是要做到持续不断，连绵不绝；要排满，否则松松垮垮，反而有害；想的场景是操场上的一个格子。**    
 
 <br>
 
@@ -101,7 +101,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 <br>
 定目标读 1 个字，可以读 30 页；如果定目标是读 30 页，很可能一个月 1 个字都读不了。  
 <br>
-1 页分解成 8 个任务  
+读两行    
 <br>
 1、《知青岁月》  
 2、《在正定》  
@@ -141,7 +141,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 ## marginal ajustment to my daily routine
 1、put 手机 down；一年几千次，每天省几个小时，可以产生 huge impact  
 2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
-3、吃饭的时候读论文；一天 3 页，一年 100 篇；  
+3、吃饭的时候读论文，读两行；一天 3 页，一年 100 篇；  
 4、刷牙洗澡的时候听演讲，要磨合；先听一年再说；完成目标，效果好的话再听一年；    
 5、不带主手机到床上；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
 6、少看国际政治，转向科学；对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
