--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -165,13 +165,15 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 
 ## 已完成
+1、读了一个阶段的论文，没有半途而废，很不简单  
+2、
 
 
 <br>
 
 <br>
 
-群里说，其实最重要的一个秘诀就是每天听一遍，因为不提醒就很容易忘，忘了就不可能在实际中应用。  
+群里说，其实最重要的一个秘诀就是要经常提醒，我的办法是每天听一遍，因为不提醒就很容易忘，忘了就不可能在实际中应用。  
 
 但丁在《神曲》中说：理解了的道理而没有牢记下来就不称其为知识。  
 
