--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -143,7 +143,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
 3、吃饭的时候读论文，读两行；一天 3 页，一年 100 篇；  
 4、刷牙洗澡的时候听演讲，要磨合；先听一年再说；完成目标，效果好的话再听一年；    
-5、不带主手机到床上；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
+5、带iPad到床上用于学习；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
 6、少看国际政治，转向科学；对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
 7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
 8、想看视频玩手机，就自动跳转到读书  
