--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -132,7 +132,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 <br>
 
 ### 学不动，想看电视：Ian 笔记、《褚时健传》、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
-08.21：Ian 笔记、《在正定》、
+
 
 <br>
 
@@ -143,10 +143,10 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
 3、吃饭的时候读论文，读两行；一天 3 页，一年 100 篇；  
 4、刷牙洗澡的时候听演讲，要磨合；先听一年再说；完成目标，效果好的话再听一年；    
-5、带iPad到床上用于学习；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
+5、原则上不带手机，要带iPad到床上用于学习；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
 6、少看国际政治，转向科学；对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
 7、学习只听纯音乐，愿意听就听，不愿意听就听 5 分钟    
-8、想看视频玩手机，就自动跳转到读书  
+8、想看视频玩手机，就自动跳转到抄一个公式(李航、周志华、nndl)，抄个百八十遍；理解了的道理而没有牢记下来就不能称其为知识  
 9、通读相册；只读第一张图片；一击即中；想想马斯克 pathetic    
 
 
