--- a/5分钟小目标法.md
+++ b/5分钟小目标法.md
@@ -131,19 +131,17 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 <br>
 
-### 学不动，想看电视：Ian 笔记、《褚时健传》、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
+### 学不动，想看电视：学不下去抄公式，Ian 笔记、d2l pysnooper、洗衣服、打扫卫生、运动、睡觉 
 
 
 <br>
 
-
-
 ## marginal ajustment to my daily routine
-1、吃饭的时候读论文，读两行；一天 3 页，一年 100 篇；  
+1、吃饭时候读论文，学不下去抄公式；读两行；一天 3 页，一年 100 篇；  
 2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
 3、decide to put 手机 down；一年几千次，每天省几个小时，可以产生 huge impact  
 4、刷牙洗澡的时候听演讲，要磨合；先听一年再说；完成目标，效果好的话再听一年；    
-5、原则上不带手机，要带iPad到床上用于学习；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
+5、原则上不带手机，要带iPad到床上用于学习，早起读微信读书；一年能省 1000 个小时；读 C++；读 Linux；**读论文**；能多读 300 篇论文   
 6、少看国际政治，转向科学；对标马斯克，能做多少做多少，马斯克是人类有史以来最伟大的人，这样学得最多，进步最大  
 7、学习一般不听音乐，如果实在忍不住就只听纯音乐，能听下去就听，听不下去就听 5 分钟    
 8、想看视频玩手机，就自动跳转到抄一个公式(李航、周志华、nndl)，抄个百八十遍；理解了的道理而没有牢记下来就不能称其为知识  
@@ -196,5 +194,7 @@ https://www.youtube.com/watch?v=TQMbvJNRpLE&t=46s
 读了 5 本书  
 读论文  
 跑步  
+
+
 
 
