Update and rename 5分钟小目标法.md to 5分钟小目标.md

--- a/5分钟小目标.md
+++ b/5分钟小目标.md
@@ -73,6 +73,8 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 读书读一个字  
 
+不喜欢的事情也能做成  
+
 这个方法最擅长的就是做需要持之以恒坚持的宏大的事情，50 万针，48 公里。非常契合，如鱼得水。
 
 <br>
