--- a/5分钟小目标.md
+++ b/5分钟小目标.md
@@ -1,4 +1,6 @@
 
+这种方法的核心是可以消除主观疲劳，就是只关注当前的 5 分钟任务，完成就行，不要想还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
+
 就认准一条：永不放弃。马斯克每取得一个新的成就，就加深一层。  
 
 拥有极强的执行力，一直是我的最高理想。现在的表现超出了我想象之中能达到的最完美的状态。    
