--- a/5分钟小目标.md
+++ b/5分钟小目标.md
@@ -166,6 +166,10 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 
 ## 已完成
+只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
+
+只关注 5 分钟，每天都能完成几十个任务  
+
 1、读了一个阶段的论文，没有半途而废，很不简单  
 2、
 
