--- a/5分钟小目标.md
+++ b/5分钟小目标.md
@@ -1,5 +1,5 @@
 
-这种方法的核心是可以消除主观疲劳，就是只关注当前的 5 分钟任务，完成就行，不要想还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
+这种方法的核心是可以消除主观疲劳，就是只完成当前的 5 分钟任务就行，不用管还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
 
 如果只是作为启动方法就总会忘了这一点，就会出问题，还是要当做贯穿始终的方法，麻烦就麻烦一点吧。  
 
