--- a/5分钟小目标.md
+++ b/5分钟小目标.md
@@ -3,6 +3,10 @@
 
 如果只是作为启动方法就总会忘了这一点，就会出问题，还是要当做贯穿始终的方法，麻烦就麻烦一点吧。  
 
+pysnooper 重要极为的意义是这是个可以反复使用的工具，不是一个程序，而是所有程序，一天用 20 次，一年就是 7000 次，三年就是 2 万次，效果相差百万倍。这就是方法和工具的威力，学会一个解决一类问题，改进一点改进几十万件事  
+
+这个方法比 pysnooper 重要得多，可以用在一生之中所有的事情上  
+
 就认准一条：永不放弃。马斯克每取得一个新的成就，就加深一层。  
 
 拥有极强的执行力，一直是我的最高理想。现在的表现超出了我想象之中能达到的最完美的状态。    
