--- a/5分钟小目标.md
+++ b/5分钟小目标.md
@@ -1,6 +1,8 @@
 
 这种方法的核心是可以消除主观疲劳，就是只完成当前的 5 分钟任务就行，不用管还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
 
+生活也应该是这样，做好当下的事情，不要想太多以后的事情  
+
 如果只是作为启动方法就总会忘了这一点，就会出问题，还是要当做贯穿始终的方法，麻烦就麻烦一点吧。  
 
 pysnooper 重要极为的意义是这是个可以反复使用的工具，不是一个程序，而是所有程序，一天用 20 次，一年就是 7000 次，三年就是 2 万次，效果相差百万倍。这就是方法和工具的威力，学会一个解决一类问题，改进一点改进几十万件事  
@@ -168,6 +170,17 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 ### 已经听完的书
 《褚时健传》
+
+
+### 未完成
+写文章，包括公众号和知网站  
+OpenCV
+课程第二遍  
+
+
+### 未完成的书
+歌德《浮士德》  
+达尔文《物种起源》  
 
 
 
