--- a/5分钟小目标.md
+++ b/5分钟小目标.md
@@ -1,4 +1,6 @@
 
+一定要解决学不动干什么的问题，每次都是因为这个问题，可能只有工作这个办法才能解决，业余时间做的事情都是零散的事，没有这个问题  
+
 这种方法的核心是可以消除主观疲劳，就是只完成当前的 5 分钟任务就行，不用管还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
 
 生活也应该是这样，做好当下的事情，不要想太多以后的事情  
