--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -150,7 +150,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 <br>
 
 ## marginal ajustment to my daily routine
-1、吃饭时候要学习，学不下去抄公式；读书；看课程；读论文，一天 3 页，一年 100 篇；  
+1、吃饭时候看唐宇迪，学不下去抄公式；读书；看课程；读论文，一天 3 页，一年 100 篇；  
 2、散步的时候听书；一年多读 50 本书。做饭洗衣服的时候听书  
 3、decide to put 手机 down；一年几千次，每天省几个小时，可以产生 huge impact  
 4、刷牙洗澡的时候听演讲，要磨合；先听一年再说；完成目标，效果好的话再听一年；    
