--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,6 +1,6 @@
 
 
-## 失败记录
+### 失败记录
 09.17：
 
 
@@ -110,8 +110,23 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 6、最重要的是开始，挪动一步，比什么都不做强万亿倍。起到通电流的作用。  
 7、可以消除焦虑，一旦开始做就非常安心，非常愉快。  
 
-
 <br>
+
+
+### 自定义格言
+1、手机常亮(用才是最重要的，没有这一步就没有后面所有的东西，忘了用就啥用都没有)  
+2、能完成一个，就能完成所有  
+3、这种方法最擅长的就是做需要持之以恒坚持的宏大的事情。最适合我  
+4、能读一行，就能读一页，就能读一章，就能读一本，就能读十本，三十本，五十本  
+5、就是当下这 5 分钟，不要想还剩多少。这种方法的核心就是消除主观疲劳  
+6、就是赎罪，愿意付出生命来解脱  
+7、成就越大，这些越渺小  
+8、5 分钟就是 4 步，跑了这 4 步，再跑下 4 步  
+9、没有更新，正好是读书的时候  
+10、已经多次证明了，能站起来就能开门，就能下楼，就能到操场散步，就能跑步。最难的是站起来这一步。  
+11、褚时健的嘴阀非常成功也非常漂亮，他的方法的核心就是把机会成本贯穿于每一个环节  
+12、学不下去：抄公式、C++、习主席、练习 Linux 命令  
+
 
 
 ### 读书：
@@ -194,11 +209,13 @@ OpenCV
 ## 已完成
 只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
 
-只关注 5 分钟，每天都能完成几十个任务  
+只关注 5 分钟算一个任务，每天都能完成几十个任务  
 
 1、读了一个阶段的论文，没有半途而废，很不简单  
 2、d2l 目标检测课程  
-3、
+3、把 4 个文件上传到 object-det  
+4、学会了 debug（尚未完成，完成以后删除括号）  
+
 
 
 <br>
@@ -208,6 +225,8 @@ OpenCV
 群里说，其实最重要的一个秘诀就是要经常提醒，我的办法是每天听一遍，因为不提醒就很容易忘，忘了就不可能在实际中应用。  
 
 但丁在《神曲》中说：理解了的道理而没有牢记下来就不称其为知识。  
+
+读完《浮士德》说，我原来从来没想过这个问题，那次去那家公司，问我一直在一线是不是自己能力的问题，我回来以后仔细想了想，我觉得否定了，最重要的理由，最大的底气就是我读过的书，当然还有一些其他的事情可以证明不是这样，但是最重要的还是读书，这是我的立身之本  
 
 
 C++ 了，1、说毛主席链接；2、靠动力不行，越来越少，这种方法越来越有力量  
