--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -215,7 +215,7 @@ OpenCV
 1、读了一个阶段的论文，没有半途而废，很不简单  
 2、读完目标检测章节，看完 d2l 目标检测课程，过了一遍 SSD  
 3、把 4 个文件上传到 object-det  
-4、学会了 debug  
+4、学会了 debug，解开了困扰 8 年的疑惑，非常好  
 5、计时超过一百次，也就是完成了 100 次小任务  
 6、
 
