--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -9,6 +9,8 @@
 
 办法就是合理穿插，换换思路。总结习主席清单    
 
+运动最有效  
+
 这种方法的核心是可以消除主观疲劳，就是只完成当前的 5 分钟任务就行，不用管还剩下多少。如果觉得有压力了，焦虑了，抵触了肯定是忘了这一点了，忘了这一点就要出问题。  
 
 生活也应该是这样，做好当下的事情，不要想太多以后的事情  
