--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -2,7 +2,8 @@
 
 ### 失败记录
 09.17：成功  
-09.18：
+09.18：因为百度新闻，去看了新闻，耽误一个小时。解决办法：下载了屏蔽百度新闻广告的插件，今后再也不会有这种情况。  
+09.19：
 
 
 一定要解决学不动干什么的问题，每次都是因为这个问题，可能只有工作这个办法才能解决，业余时间做的事情都是零散的事，没有这个问题  
@@ -221,7 +222,9 @@ OpenCV
 3、把 4 个文件上传到 object-det  
 4、学会了 debug，解开了困扰 8 年的疑惑；打开了读源码的大门，前景无限；以后可以学习公司业务；编程中 debug 时间最多；不会 debug 根本就不可能学会编程  
 5、计时超过一百次，也就是完成了 100 次小任务  
-6、
+6、下载了屏蔽百度新闻广告的插件，再也不会受此影响，极好  
+7、
+
 
 
 <br>
