--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -222,7 +222,7 @@ OpenCV
 3、把 4 个文件上传到 object-det  
 4、学会了 debug，解开了困扰 8 年的疑惑；打开了读源码的大门，前景无限；以后可以学习公司业务；编程中 debug 时间最多；不会 debug 根本就不可能学会编程  
 5、计时超过一百次，也就是完成了 100 次小任务  
-6、下载了屏蔽百度新闻广告的插件，再也不会受此影响，极好  
+6、下载了屏蔽百度新闻广告的插件，再也不会受此影响，清净太多了。垃圾百度  
 7、
 
 
