--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -121,6 +121,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 ### 自定义格言
 1、手机常亮(用才是最重要的，没有这一步就没有后面所有的东西，忘了用就啥用都没有)  
+1.1、手机常亮的最大作用是消除主观疲劳。看似麻烦了，实则容易百倍，能达到做什么成什么，能善始善终。原来方法看似集中精力，却基本上都会半途而废。  
 2、能完成一个，就能完成所有  
 3、这种方法最擅长的就是做需要持之以恒坚持的宏大的事情。最适合我  
 4、能读一行，就能读一页，就能读一章，就能读一本，就能读十本，三十本，五十本  
