--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -219,6 +219,8 @@ OpenCV
 
 只关注 5 分钟算一个任务，每天都能完成几十个任务  
 
+不要小瞧小任务，习主席说，把正在做的事情做好，就是在报效国家，就是在为民族复兴做贡献  
+
 1、读了一个阶段的论文，没有半途而废，很不简单  
 2、读完目标检测章节，看完 d2l 目标检测课程，过了一遍 SSD  
 3、把 4 个文件上传到 object-det  
