--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,9 +1,13 @@
 
+### 失败清单
+1、吃饭没有看学习视频   1 次 1 个半小时
 
 ### 失败记录
 09.17：成功  
 09.18：因为百度新闻，去看了新闻，耽误一个小时。解决办法：下载了屏蔽百度新闻广告的插件，今后再也不会有这种情况。  
-09.19：
+09.20：吃饭看电影，耽误一个半小时    
+09.21：
+
 
 
 一定要解决学不动干什么的问题，每次都是因为这个问题，可能只有工作这个办法才能解决，业余时间做的事情都是零散的事，没有这个问题  
