--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -138,6 +138,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 10、已经多次证明了，能站起来就能开门，就能下楼，就能到操场散步，就能跑步。最难的是站起来这一步。  
 11、褚时健的嘴阀非常成功也非常漂亮，他的方法的核心就是把机会成本贯穿于每一个环节  
 12、学不下去：抄公式、C++、习主席、练习 Linux 命令  
+13、不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟  
 
 
 
@@ -224,6 +225,8 @@ OpenCV
 只关注 5 分钟算一个任务，每天都能完成几十个任务  
 
 不要小瞧小任务，习主席说，把正在做的事情做好，就是在报效国家，就是在为民族复兴做贡献  
+
+不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟  
 
 1、读了一个阶段的论文，没有半途而废，很不简单  
 2、读完目标检测章节，看完 d2l 目标检测课程，过了一遍 SSD  
