--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,12 +1,17 @@
 
-### 失败清单
-1、吃饭没有看学习视频   1 次 1 个半小时
+### 失败清单，这个是提炼的精华，是金子
+1、吃饭没有看学习视频；如果不想看视频，就什么都不看   1 次 1 个半小时
+2、失败的一个极为重要的原因，多次魔道，要使用库兹涅佐夫方法
+3、
+
+
 
 ### 失败记录
 09.17：成功  
 09.18：因为百度新闻，去看了新闻，耽误一个小时。解决办法：下载了屏蔽百度新闻广告的插件，今后再也不会有这种情况。  
 09.20：吃饭看电影，耽误一个半小时    
-09.21：
+09.21：没有库兹涅佐夫  
+09.22：
 
 
 
