Update and rename 面试题.md to pytorch/ch02/面试题.md

--- a/pytorch/ch02/面试题.md
+++ b/pytorch/ch02/面试题.md
@@ -1,13 +1,11 @@
 
 ### 面向工作学习法，比自己瞎学效率要高得多
 
-工作以后每天读牛客网  
+每天读牛客网，一次至少 20 篇，看评论，收藏  
+
+一个是知道怎么去面试，二是以后自己面试  
 
 读面试题，知道重点  
-
-未来十几天就是以面试题为主，顺便看完视频  
-
-每天至少读 10 篇，先读有答案的  
 
 起来先读一遍题目，再找一些先解决掉，再看视频  
 
