--- a/pytorch/ch02/面试题.md
+++ b/pytorch/ch02/面试题.md
@@ -5,6 +5,8 @@
 
 一个是知道怎么去面试，二是以后自己面试  
 
+可以知道哪家公司好，可以知道怎么面试好，可以知道真实的想法  
+
 读面试题，知道重点  
 
 起来先读一遍题目，再找一些先解决掉，再看视频  
@@ -12,36 +14,27 @@
 在书上找不到答案的，用百度搜  
 
 
-先读完这个  
-### 《1000面试题，BAT机器学习面试刷题宝典》
-https://mp.weixin.qq.com/s/iYHfqvEDCi_XDs07guW0vA
+### Python  
+1、深拷贝浅拷贝  
 
 
-读完接着看完这些  
-### https://mp.weixin.qq.com/s/K0QK1SzxOPR-x2MWIUIhGQ
 
-
+### 机器学习
 
 
 
 
-#### 《一文看尽80道AI算法高频面试题》
-https://mp.weixin.qq.com/s/5ZkwjtaVvDQmaZ6b9W3x6g  
+### 深度学习
 
 
 
 
-
-已解决：
-贝叶斯公式  
-overfitting 解决办法  
+### 图像识别
 
 
 
 
-
-
-
+### 语言处理
 
 
 
