--- a/pytorch/ch2/面试题.md
+++ b/pytorch/ch2/面试题.md
@@ -1,6 +1,8 @@
 
 ### 面向工作学习法，比自己瞎学效率要高得多
 
+清楚多了  
+
 每天读牛客网，一次至少 20 篇，看评论，收藏  
 
 一个是知道怎么去面试，二是以后自己面试  
@@ -14,27 +16,7 @@
 在书上找不到答案的，用百度搜  
 
 
-### 1、Python  
-1、深拷贝浅拷贝  
-
-
-
-### 2、机器学习
-
-
-
-
-### 3、深度学习
-
-
-
-
-### 4、图像识别
-
-
-
-
-### 5、语言处理
+讲项目  
 
 
 
