--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -1,6 +1,47 @@
 
 ### 重要问题
 
-1、xgboost  
+#### 1、xgboost 相关
+①、如何评估特征重要性，如何判断过拟合，欠拟合，如果解决过拟合，欠拟合，如何调参  
+②、为什么要二阶展开  
+③、xgboost采样的时候怎么采样的  
+④、
 
-2、
+#### 2、LR
+损失函数，为什么不用最小二乘  
+
+
+
+3、
+
+
+
+Naive Bayes, random forest, svm, logistic regression, xgboost, gdbt全家桶，每个都详细问讲区别讲联系讲损失函数
+一些模型独有的问题：
+- svm核函数 种类，如何选择，如何应用
+- random forest引出 bagging boosting，区别
+- random forest 分割依据 （忘了）
+- random forest 随机在哪里（特征，样本选择）
+- lr 和 rf 在输入上的不同
+- xgboost 二阶导数
+- 等
+
+HMM CRF双雄
+- Viterbi
+
+tf-idf 公式 如何用tf-idf计算文本中的关键词
+
+
+
+
+### 一般小问题  
+
+1、写出 LR 和 SVM 损失函数  
+2、为什么AUC面积大证明性能强  
+3、
+
+
+
+### 已经解决的问题
+
+
