--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -233,6 +233,8 @@ OpenCV
 
 不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟  
 
+种一个土豆也是为国家做贡献  
+
 1、读了一个阶段的论文，没有半途而废，很不简单  
 2、读完目标检测章节，看完 d2l 目标检测课程，过了一遍 SSD  
 3、把 4 个文件上传到 object-det  
@@ -240,7 +242,8 @@ OpenCV
 5、计时超过一百次，也就是完成了 100 次小任务  
 6、下载了屏蔽百度新闻广告的插件，再也不会受此影响，清净太多了。垃圾百度  
 7、计时超过两百次，也就是完成了 200 次小任务  
-8、
+8、计时超过三百次，也就是完成了 300 次小任务  
+9、
 
 
 
