--- a/pytorch/ch2/深度学习.md
+++ b/pytorch/ch2/深度学习.md
@@ -1,21 +1,23 @@
 
 ### 重要问题 
 
-1、Batch Norm  
+#### Batch Norm  
 
 2、
 
 
 ### 一般问题  
 
-1、numpy 实现卷积  
-查 鱼书  
+
 
 2、感受野计算  
 
 
 
 ### 已解决问题
+
+#### numpy 实现卷积  
+d2l 和鱼书，还是以 d2l 为准  
 
 
 
