--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -144,6 +144,9 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 11、褚时健的嘴阀非常成功也非常漂亮，他的方法的核心就是把机会成本贯穿于每一个环节  
 12、学不下去：抄公式、C++、习主席、练习 Linux 命令  
 13、不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟  
+14、Do something magnificent.
+15、人永远不会忘记自己所做的坏事  
+16、
 
 
 
@@ -212,10 +215,13 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 《褚时健传》
 
 
-### 未完成
+
+### 未完成；Musk：I never give up.
+一件事要做到底  
+C++  
 写文章，包括公众号和知网站  
 OpenCV
-课程第二遍  
+
 
 
 ### 未完成的书
