--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,8 +1,8 @@
 
 ### 失败清单，这个是提炼的精华，是金子
-1、吃饭没有看学习视频；如果不想看视频，就什么都不看   1 次 1 个半小时
-2、失败的一个极为重要的原因，多次魔道，要使用库兹涅佐夫方法
-3、
+1、吃饭没有看学习视频；如果不想看视频，就什么都不看   1 次 1 个半小时  
+2、失败的一个极为重要的原因，多次魔道，要使用库兹涅佐夫方法  
+3、  
 
 
 
@@ -216,9 +216,12 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 
 
 
-### 未完成；Musk：I never give up.
+### 未完成；
+#### Musk：I never give up.
 一件事要做到底  
+马斯克的决心(不应该叫决心，应该叫方法)再加上这个方法，完成一件又一件事
 C++  
+牛客网  
 写文章，包括公众号和知网站  
 OpenCV
 
