--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -219,7 +219,7 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 ### 未完成；
 #### Musk：I never give up.
 一件事要做到底  
-马斯克的决心(不应该叫决心，应该叫方法)再加上这个方法，完成一件又一件事
+马斯克的决心(不应该叫决心，应该叫方法)再加上这个方法，完成一件又一件事，还有什么不能做成呢？什么都不用怕  
 C++  
 牛客网  
 写文章，包括公众号和知网站  
