--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,6 +1,6 @@
 
 ### 失败清单，这个是提炼的精华，是金子
-1、吃饭没有看学习视频；如果不想看视频，就什么都不看   1 次 1 个半小时  
+1、吃饭没有看学习视频；如果不想看视频，就什么都不看   2 次  10 小时  
 2、失败的一个极为重要的原因，多次魔道，要使用库兹涅佐夫方法  
 3、  
 
