--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,6 +1,6 @@
 
 ### 失败清单，这个是提炼的精华，是金子
-1、吃饭没有看学习视频；如果不想看视频，就什么都不看   2 次  10 小时  
+1、吃饭没有看学习视频；如果不想看视频，就什么都不看   2 次 10 小时  
 2、失败的一个极为重要的原因，多次魔道，要使用库兹涅佐夫方法  
 3、  
 
@@ -222,6 +222,8 @@ Pull those ambitious dreams that you have for yourself, off the bookshelf, and s
 马斯克的决心(不应该叫决心，应该叫方法)再加上这个方法，完成一件又一件事，还有什么不能做成呢？什么都不用怕  
 C++  
 牛客网  
+LeetCode  
+物理  
 写文章，包括公众号和知网站  
 OpenCV
 
@@ -252,7 +254,10 @@ OpenCV
 6、下载了屏蔽百度新闻广告的插件，再也不会受此影响，清净太多了。垃圾百度  
 7、计时超过两百次，也就是完成了 200 次小任务  
 8、计时超过三百次，也就是完成了 300 次小任务  
-9、
+9、看完了 YOLO 课程  
+10、C++ 第八章  
+11、C++ 第九章  
+12、
 
 
 
