--- a/pytorch/ch2/面试.md
+++ b/pytorch/ch2/面试.md
@@ -20,5 +20,13 @@
 
 自我介绍  
 
-LeetCode：https://www.nowcoder.com/ta/job-code-high  
+自己的优缺点：  
+
+做过的最有成就感的事：这个为主，学会了机器学习和深度学习。读书，读完史诗 5 本、《资治通鉴》、《穷查理宝典》 、
+
+遇到的最大的困难是什么，怎么解决的：学习机器学习和深度学习，零基础，没人教，学数学、学编程、学算法，看视频，看书，背单词  
+
+人生规划：先老老实实学技术，打好根基，想几年以后带团队做出实际的产品。  
+
+LeetCode 热门问题：https://www.nowcoder.com/ta/job-code-high  
 
