--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -2,7 +2,7 @@
 ### 重要问题
 
 #### 1、xgboost 相关
-①、
+①、  
 ②、为什么要二阶展开  
 ③、xgboost采样的时候怎么采样的  
 ④、手写xgboost的目标函数，xgboost和GBDT的区别，xgboost构建树时候节点分裂的公式是什么？ xgboost如何调参,xgboost可以自定义损失函数吗？给定一个场景如何自定义损失函数？如果样本的权重不一样如何自定义损失函数？sklearn的xgboost支持哪些损失函数？分类和回归算法都有哪些损失函数？模型融合如何做的？bagging，boosting和stacking的原理以及他们的区别是是什么；
@@ -62,7 +62,7 @@ tf-idf 公式 如何用tf-idf计算文本中的关键词
 权重衰减通过惩罚绝对值较大的参数，为需要学习的模型增加了限制（可以看自己的笔记 d2l 66 页）  
 
 #### 了解什么评估指标
-recall、precision、F1、AUC  
+交叉验证是模型评估方法、recall、precision、F1、AUC  
 
 
 
