--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -1,35 +1,67 @@
 
-管理清单习主席
-时政只读习主席的书，读的时候真心相信，原因主要有几点：
+### 管理清单习主席  
+时政只读习主席的书，读的时候真心相信，原因主要有几点：  
 
-1、习主席是历史伟人，对世界发展进程产生了决定性影响。如此近距离学习伟人，实在是幸运。
-2、习主席天资聪慧，勤奋好学，见多识广，经验丰富。
-局座这种级别都能做出很多精准的判断，习主席要厉害上百倍。
-3、社会科学，过于混乱，各种妖魔鬼怪都有。读之有害，多是浪费时间。
-4、习主席的想法，会变为政策，会被实施，会影响国家的发展。
-5、习主席读过大量的书，50 年，几千本
-6、全中国最为丰富的时间经验，经历过处理过无数的事情，见过各种人
-7、原来是自己找矿，开采，炼矿，几吨提取几克。现在直接在银行拿金块
+1、习主席是历史伟人，对世界发展进程产生了决定性影响。如此近距离学习伟人，实在是幸运。  
+2、习主席天资聪慧，勤奋好学，见多识广，经验丰富。  
+局座这种级别都能做出很多精准的判断，习主席要厉害上百倍。  
+3、社会科学，过于混乱，各种妖魔鬼怪都有。读之有害，多是浪费时间。  
+4、习主席的想法，会变为政策，会被实施，会影响国家的发展。  
+5、习主席读过大量的书，50 年，几千本  
+6、全中国最为丰富的时间经验，经历过处理过无数的事情，见过各种人  
+7、原来是自己找矿，开采，炼矿，几吨提取几克。现在直接在银行拿金块  
 
 
 
-读《知青岁月》等四本书，最后调整顺序。
-1、调查实际。走遍了所有的村，所有的乡镇，所有的县。
-2、大格局，雄心壮志，从后往前想，军队建设、海军、
-3、制定发展战略，厦门制定计划，正定制定计划。
-4、居安思危，底线思维。
-5、重视人才，正定人才九条。
-6、狠抓落实，执行力极强。真正的落实。
-7、读书，正定，工作 10 几个小时，12 点以后读书，读到凌晨 2、3 点。
-知青，读书，煤油灯。
-8、效率高
-9、重实效，不重虚名。少开会，少下文件。正定不追求粮食虚名。
-10、功成不必在我。很多都是走后，或者多年以后才有效果
-11、心底无私天地宽。周而不比。
-12、严于律己。
-13、提高产品附加值
-14、能识人，会用人
-15、
+读《知青岁月》等四本书，最后调整顺序。  
+1、调查实际。走遍了所有的村，所有的乡镇，所有的县。  
+2、大格局，雄心壮志，从后往前想，军队建设、海军、  
+3、制定发展战略，厦门制定计划，正定制定计划。  
+4、居安思危，底线思维。  
+5、重视人才，正定人才九条。  
+6、狠抓落实，执行力极强。真正的落实。  
+7、读书，正定，工作 10 几个小时，12 点以后读书，读到凌晨 2、3 点。  
+知青，读书，煤油灯。  
+8、效率高  
+9、重实效，不重虚名。少开会，少下文件。正定不追求粮食虚名。  
+10、功成不必在我。很多都是走后，或者多年以后才有效果  
+11、心底无私天地宽。周而不比。  
+12、严于律己。  
+13、提高产品附加值  
+14、能识人，会用人  
+15、  
+
+
+要写的：
+
+前言，这样的履历全中国只有习主席一个人，从历史上看，能有这样经历的人，也是屈指可数  
+
+除了乡一级以外，经历过所有的层级。其实 82 年他自己主动提出要到基层去，本来是想去到乡里的，但是河北省和石家庄市的领导研究以后觉得中央下来的人，
+
+1、背景  
+成就，做成了什么事，最后走的时候哭了，当众丢人了
+
+
+2、读书，罗斯福  
+路遥，读过《平凡的世界》，就知道他的格局已经是非常之大，路遥这个人视野开阔，写的书气势磅礴。评价  
+读歌德《浮士德》  
+彭老师说，一读书就醉了  
+
+2.1、为什么去正定  
+胸怀大志，其他人都觉得应该补偿，应该享受。  
+
+
+3、善良  
+卫士、正定老人、正定火车、资助学生、秘书是债主、出手术费、  
+
+
+4、有本事
+知青：  
+正定：荣国府，本来是想一个影棚，门票 5 分钱，杭州西湖  
+
+
+
+
 
 
 #### 调查实际
@@ -54,19 +86,19 @@
 
 
 #### 习主席做成或促成的事(大事)，极强的个人能力（一页一页找）
-《知青岁月》：
-《在正定》：
-《在厦门》：
-《在宁德》：
-《在福州》：
+《知青岁月》：  
+《在正定》：  
+《在厦门》：  
+《在宁德》：  
+《在福州》：  
 
 
 #### 解决的问题(小事)
-《知青岁月》：
-《在正定》：
-《在厦门》：
-《在宁德》：
-《在福州》：
+《知青岁月》：  
+《在正定》：  
+《在厦门》：  
+《在宁德》：  
+《在福州》：  
 
 
 
