--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -38,8 +38,9 @@
 
 除了乡一级以外，经历过所有的层级。其实 82 年他自己主动提出要到基层去，本来是想去到乡里的，但是河北省和石家庄市的领导研究以后觉得中央下来的人，
 
-1、背景  
-成就，做成了什么事，最后走的时候哭了，当众丢人了
+1、做成的事
+才十几岁，75 年走的，当时才 22 岁。沼气、打井、打坝、修厕所、教学班、打铁、缝衣服、供销社、
+
 
 
 2、读书，罗斯福  
