--- a/pytorch/ch2/深度学习.md
+++ b/pytorch/ch2/深度学习.md
@@ -7,7 +7,8 @@
 
 #### 说一说 word embedding、word2vec、skip-gram、
 
-
+#### Mask R-CNN
+损失函数、RPN、ROIAlign、
 
 
 ### 一般问题  
@@ -17,6 +18,13 @@ d2l 第 7 章
 
 2、momentum 等优化算法公式，参数含义  
 
+3、输入n*n*1，卷积和k*k*6， 问输出尺寸和参数量（nndl，弄懂卷积神经网络参数是什么）  
+
+4、VGG优点，resnet优点特点（d2l）  
+
+5、relu 好处  
+
+6、
 
 
 ### 已解决问题
