--- a/pytorch/ch2/深度学习.md
+++ b/pytorch/ch2/深度学习.md
@@ -3,12 +3,17 @@
 
 #### Batch Norm  
 
-#### RNN 原理，RNN 为什么难以训练，LSTM 又是怎么改进的，LSTM有几个门？各个门的作用是什么？公式是什么？LSTM解决了什么问题
+#### RNN 原理，RNN 为什么难以训练，
+
+#### LSTM 是怎么改进的，LSTM有几个门？各个门的作用是什么？公式是什么？LSTM解决了什么问题、画一下LSTM结构图、
 
 #### 说一说 word embedding、word2vec、skip-gram、
 
 #### Mask R-CNN
 损失函数、RPN、ROIAlign、
+
+#### ResNet
+resnet优点特点、短路连接作用、
 
 
 ### 一般问题  
