--- a/pytorch/ch2/机器学习.md
+++ b/pytorch/ch2/机器学习.md
@@ -20,7 +20,9 @@
 
 
 #### 5、kmeans
-手写 Kmeans 代码、具体步骤、k 值如何选择、如何初始化、聚的是特征还是样本？特征的距离如何计算？什么数据不能聚、  
+手写 Kmeans 代码、具体步骤、k 值如何选择、如何初始化、聚的是特征还是样本？特征的距离如何计算？  
+什么数据不能聚：圆环套圆圈、笑脸、，非凸数据  
+
 
 
 #### 6、SVM： 拉格朗日乘子，KKT条件，对偶问题，核方法是什么，用过哪些核函数
@@ -61,7 +63,9 @@ PCA的流程，PCA第一步为什么要中心化、
 交叉验证是模型评估方法、recall、precision、F1、AUC、介绍一下 ROC 曲线（西瓜书）、  
 
 #### DBSCAN
-
+传染病一样，在范围内，发展下线 要指定半径、  
+优点：不需要制定簇的个数、可以发现任意形状的簇、  
+缺点：参数难以选择，参数对结果影响非常大、训练很慢、
 
 
 Naive Bayes, random forest, svm, logistic regression, xgboost, gdbt全家桶，每个都详细问讲区别讲联系讲损失函数
