--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -3,7 +3,7 @@
 时政只读习主席的书，读的时候真心相信，原因主要有几点：  
 
 1、习主席是历史伟人，对世界发展进程产生了决定性影响。如此近距离学习伟人，实在是幸运。  
-2、习主席天资聪慧，勤奋好学，见多识广，经验丰富。  
+2、习主席天资聪慧，勤奋好学，见多识广，经验丰富。习主席的经历，整个人类历史上也没几个人能比得上  
 局座这种级别都能做出很多精准的判断，习主席要厉害上百倍。  
 3、社会科学，过于混乱，各种妖魔鬼怪都有。读之有害，多是浪费时间。  
 4、习主席的想法，会变为政策，会被实施，会影响国家的发展。  
@@ -15,7 +15,7 @@
 
 读《知青岁月》等四本书，最后调整顺序。  
 1、调查实际。走遍了所有的村，所有的乡镇，所有的县。  
-2、大格局，雄心壮志，从后往前想，军队建设、海军、  
+2、志向远大，雄心壮志；大格局，从后往前想，军队建设、海军、  
 3、制定发展战略，厦门制定计划，正定制定计划。  
 4、居安思危，底线思维。  
 5、重视人才，正定人才九条。  
@@ -39,14 +39,11 @@
 除了乡一级以外，经历过所有的层级。其实 82 年他自己主动提出要到基层去，本来是想去到乡里的，但是河北省和石家庄市的领导研究以后觉得中央下来的人，
 
 1、做成的事
-才十几岁，75 年走的，当时才 22 岁。沼气、打井、打坝、修厕所、教学班、打铁、缝衣服、供销社、
+才十几岁，75 年走的，当时才 22 岁。我上班两年多啥事儿都没做成，一件能拿出手的事情都没有。  
+沼气、打井，冬天，冰里跳下去挖 P36、打坝、修厕所、教学班、打铁、缝衣服、供销社、
 
 
-
-2、读书，罗斯福  
-路遥，读过《平凡的世界》，就知道他的格局已经是非常之大，路遥这个人视野开阔，写的书气势磅礴。评价  
-读歌德《浮士德》  
-彭老师说，一读书就醉了  
+2、读书，
 
 2.1、为什么去正定  
 胸怀大志，其他人都觉得应该补偿，应该享受。  
@@ -68,13 +65,26 @@
 #### 调查实际
 
 
+#### 志向远大
+《知》P77：下去，能成就做一番大事业。P101：本来是可以不用去的，大抱负、大气魄、大本事、大勇气。
+
+
 #### 制定发展战略
 
 
 
 #### 爱读书
 读了 30 年的经历，大部分人都会说到爱读书这一点  
-《知青岁月》：
+一去就带了两个箱子，去的都是壮劳力很沉，炕上、窗台上、箱子上到处都是一摞一摞的书；村里人说他们是有烟瘾，习主席是有“书瘾”
+P40：很累了，还看书到很晚  
+每次探亲或外出，都会带来一些新书  
+罗斯福  
+路遥，读过《平凡的世界》，就知道他的格局已经是非常之大，路遥这个人视野开阔，写的书气势磅礴。评价  
+读歌德《浮士德》  
+彭老师说，一读书就醉了  
+书单：范文澜《中国通史》、钱穆吕振羽中国史、《史记》、《汉书》、《后汉书》、《三国志》、《中国古代思想史》、经常背诵范仲淹的《岳阳楼记》、屈原的《离骚》、《古诗源》、《李白诗选》、《三曹诗选》、喜欢曹操、喜欢辛弃疾、经常背《将进酒》、喜欢慷慨激昂，豪迈自信、读到好的地方会跑到院子里大声朗读，好的都会背下来。《资本论》很多遍、马列哲学、其他哲学书籍、亚当斯密《国富论》、《世界通史》、苏联谢缅诺夫《中世纪史》、《基督教青年读本》、巴尔扎克的小说、莫泊桑的小说、莎士比亚的戏剧、苏联作家肖洛霍夫《静静的顿河》、雨果的《悲惨世界》和《九三年》、列夫托尔斯泰的《战争与和平》、《鲁迅全集》  
+
+雷平生的父亲是雷英夫少将，带了很多军事书籍。《罗斯福见闻密录》、《隆美尔战时文件》、《太平洋战争：岛屿战争》、冯·克劳塞维茨《战争论》、《中国古代军事理论选集》、系统学习了毛主席的军事理论作品，反复阅读，融会贯通，对于战役发生的时间、地点、背景环境、目的、过程、处理步骤、决策原则都耳熟能详。苏联军事著作《伟大卫国战争年代苏军战术的发展》《苏联伟大卫国战争的重要战役》(上、中、下册及图册)、会照着图册，熟悉战争发展过程，对战争过程进行复盘、基辛格的著作，学习智囊的关键作用，学习军队的设计体系。
 
 
 
@@ -137,6 +147,9 @@
 
 
 
+
+## 已经写了的
+1、采访、背景  
 
 
 
