--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -4,7 +4,6 @@
 
 1、习主席是历史伟人，对世界发展进程产生了决定性影响。如此近距离学习伟人，实在是幸运。  
 2、习主席天资聪慧，勤奋好学，见多识广，经验丰富。习主席的经历，整个人类历史上也没几个人能比得上  
-局座这种级别都能做出很多精准的判断，习主席要厉害上百倍。  
 3、社会科学，过于混乱，各种妖魔鬼怪都有。读之有害，多是浪费时间。  
 4、习主席的想法，会变为政策，会被实施，会影响国家的发展。  
 5、习主席读过大量的书，50 年，几千本  
@@ -39,8 +38,25 @@
 除了乡一级以外，经历过所有的层级。其实 82 年他自己主动提出要到基层去，本来是想去到乡里的，但是河北省和石家庄市的领导研究以后觉得中央下来的人，
 
 1、做成的事
-才十几岁，75 年走的，当时才 22 岁。我上班两年多啥事儿都没做成，一件能拿出手的事情都没有。  
-沼气、打井，冬天，冰里跳下去挖 P36、打坝、修厕所、教学班、打铁、缝衣服、供销社、
+才十几岁，75 年走的，当时才 22 岁。我上班两年多啥事儿都没做成。  
+村里说：有决心，有毅力，轻易不说出口，说了就是想好了，认定的事就能坚持到底。干一件成一件，没有一个是半途而废的。
+村里说：村支书很难做的，村里的矛盾多如牛毛。
+沼气，原因，当时村里人都不相信，奖励了一台三轮摩托车，说又拉不了多少东西，又不能干农活，难道天天开着去兜风吗？换了一辆手扶拖拉机，一台磨面机    
+打井，解决了吃水和灌溉问题，水质不好，而且灌溉要去挑水，劳动量很大，冬天，冰里跳下去挖 P36，落了病根 P173。现在还是在用。干活不惜力，P211 打夯没手套，就用手抓绳子，很快就是水泡了，第二天再干活水泡就磨破了，开始流血，但是不管多苦，还是拼命干；挑粪，肩膀磨出血了，就垫一件衣服，后来就有茧子了；白天干活太阳很毒，身上蜕皮，怕他受不了，就让他歇会儿，他也不歇  
+村里人说，大城市来的，这么能吃苦，了不起啊。  
+打坝，开始很多人是反对的，也是反复做工作，说为啥村里一直受穷？为啥一直吃不饱？就是地太少了，淤地坝可以保持水分，他自己一直在一线劳动。打了 5 个大坝，修梯田，增加了几十亩地，我看过那个村的照片，就是在山沟里，沟沟壑壑很狭窄、
+修厕所、
+教学班，很多人不识字，说年轻人不识字以后是没有出路的、
+供销社，到城里有 70 里，天一亮就走，要到太阳落山才能回来，而且很多时候就是去买一些肥皂煤油之类的日用品，就统一采购，在村里买就行了，定期再去城里结账，村里有个人会算账就让他管了，给公分  
+铁业社，发现村里有的人有打铁的手艺，打干活的工具，不用到城里去买了。打的多了用不完，还可以卖给县里，给村里增加收入，而且每卖出一件就会给铁匠相应的奖励，提高积极性    
+看似少了两个劳动力，其实节省了大部分人来回跑的时间  
+缝纫社，解放妇女劳动、  
+分配很合理，让人各自发挥自己的长处，很受大家欢迎，村里的生产和生活都很顺畅  
+引进了种子，自己学其中的技术。烤烟  
+办了一个磨坊，原来是用毛驴拉石磨，非常辛苦，效率很低。换了机器，村里说这台机器可以顶的上1000头毛驴，免费磨面，解放了人的劳动力，毛驴也可以用在农业生产中了  
+就像国家的医疗保障等各种公共服务一样，本身不盈利，但是让人没有后顾之忧，可以发挥更多的经历用在工作上，可以创造出更多的价值  
+
+
 
 
 2、读书，
@@ -50,12 +66,18 @@
 
 
 3、善良  
-卫士、正定老人、正定火车、资助学生、秘书是债主、出手术费、  
+卫士、推车（截图原话）、正定老人、上学给了一个大棉衣，可以穿可以盖、给粮票、治腿病，救了命 P269，现在儿女长大了，都在外面工作，每次过年回来都会说，这条命是救下的、正定火车、资助学生、秘书是债主、出手术费、  
 
 
 4、有本事
 知青：  
 正定：荣国府，本来是想一个影棚，门票 5 分钱，杭州西湖  
+
+
+
+小故事：
+P181：可不能贪污啊  
+
 
 
 
@@ -76,17 +98,21 @@
 #### 爱读书
 读了 30 年的经历，大部分人都会说到爱读书这一点  
 一去就带了两个箱子，去的都是壮劳力很沉，炕上、窗台上、箱子上到处都是一摞一摞的书；村里人说他们是有烟瘾，习主席是有“书瘾”
-P40：很累了，还看书到很晚  
-每次探亲或外出，都会带来一些新书  
-罗斯福  
-路遥，读过《平凡的世界》，就知道他的格局已经是非常之大，路遥这个人视野开阔，写的书气势磅礴。评价  
+P40：劳动强度很大，很累了，还看书到半夜才睡。P209 脸经常被熏黑  
+每次探亲或外出，都会带来一些新书，他们知青也经常换着书看  
+放羊的时候，就带着书去读一天  
+P342： 2015 年电视剧《平凡的世界》热播，当时开两会习主席在一次座谈会上说，我和路遥很熟，当年住过一个窑洞，就隔了一座山，在同一个公社里。经常交流，有时候彻夜长谈。农村、城市、社会、时政，古今中外，天文地理无所不谈。路遥，读过《平凡的世界》，就知道他的格局已经是非常之大，路遥这个人视野开阔，写的书气势磅礴。评价  
+只有愚蠢的人才不去读书  
 读歌德《浮士德》  
 彭老师说，一读书就醉了  
-书单：范文澜《中国通史》、钱穆吕振羽中国史、《史记》、《汉书》、《后汉书》、《三国志》、《中国古代思想史》、经常背诵范仲淹的《岳阳楼记》、屈原的《离骚》、《古诗源》、《李白诗选》、《三曹诗选》、喜欢曹操、喜欢辛弃疾、经常背《将进酒》、喜欢慷慨激昂，豪迈自信、读到好的地方会跑到院子里大声朗读，好的都会背下来。《资本论》很多遍、马列哲学、其他哲学书籍、亚当斯密《国富论》、《世界通史》、苏联谢缅诺夫《中世纪史》、《基督教青年读本》、巴尔扎克的小说、莫泊桑的小说、莎士比亚的戏剧、苏联作家肖洛霍夫《静静的顿河》、雨果的《悲惨世界》和《九三年》、列夫托尔斯泰的《战争与和平》、《鲁迅全集》  
+15 岁到 22 岁，年纪非常小，很了不起  
+书单：范文澜《中国通史》、钱穆吕振羽中国史、《史记》、《汉书》、《后汉书》、《三国志》、《中国古代思想史》、经常背诵范仲淹的《岳阳楼记》、有一次去县里开知识青年积极分子代表会，有个人看到习主席挎包里有不少书，就想借一本，习主席随手抽了一本沈括的《梦溪笔谈》、屈原的《离骚》、《古诗源》、《李白诗选》、经常背《将进酒》、《三曹诗选》、喜欢曹操、喜欢辛弃疾、喜欢慷慨激昂，豪迈自信、读到兴奋的时候就跑到院子里大声朗读，好的诗词都会背下来。所以非常了解我们古代的优秀文化，这几年出了不少好的文物的纪录片和节目《国家宝藏》。《资本论》很多遍、马列哲学、其他哲学书籍、亚当斯密《国富论》、《世界通史》、苏联谢缅诺夫《中世纪史》、《基督教青年读本》、巴尔扎克的小说、莫泊桑的小说、莎士比亚的戏剧、苏联作家肖洛霍夫《静静的顿河》、雨果的《悲惨世界》和《九三年》、列夫托尔斯泰的《战争与和平》、《鲁迅全集》  
 
-雷平生的父亲是雷英夫少将，带了很多军事书籍。《罗斯福见闻密录》、《隆美尔战时文件》、《太平洋战争：岛屿战争》、冯·克劳塞维茨《战争论》、《中国古代军事理论选集》、系统学习了毛主席的军事理论作品，反复阅读，融会贯通，对于战役发生的时间、地点、背景环境、目的、过程、处理步骤、决策原则都耳熟能详。苏联军事著作《伟大卫国战争年代苏军战术的发展》《苏联伟大卫国战争的重要战役》(上、中、下册及图册)、会照着图册，熟悉战争发展过程，对战争过程进行复盘、基辛格的著作，学习智囊的关键作用，学习军队的设计体系。
+雷平生的父亲是雷英夫少将，毛主席称他为“洛阳才子”，带了很多军事书籍。《罗斯福见闻密录》、《隆美尔战时文件》、《太平洋战争：岛屿战争》、冯·克劳塞维茨《战争论》、《中国古代军事理论选集》、系统学习了毛主席的军事理论作品，反复阅读，融会贯通，对于战役发生的时间、地点、背景环境、目的、过程、处理步骤、决策原则都耳熟能详。苏联军事著作《伟大卫国战争年代苏军战术的发展》《苏联伟大卫国战争的重要战役》(上、中、下册及图册)、会照着图册，熟悉战争发展过程，对战争过程进行复盘、基辛格的著作，学习智囊的关键作用，学习军队的设计体系。
 
+罗斯福  
 
+自述：我的文学情缘 http://www.qstheory.cn/zhuanqu/bkjx/2019-04/24/c_1124408198.htm  
 
 
 #### 善良
