--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -59,8 +59,10 @@
 
 小故事：
 P181：可不能贪污啊  
+吃不饱，劳动量大，吃酸菜，条件苦，时间长，极少数  
+很不容易，学习文件，有些就是批判他父亲的文件  
 入团 8 次，入党 10 次；别人告诉他这次又不行，他也不以为意，再写一份新的。坚韧的品格  
-学习文件，有些就是批判他父亲的文件  
+信被拆了  
 
 
 
@@ -70,7 +72,8 @@ P181：可不能贪污啊
 
 
 #### 志向远大
-《知》P77：下去，能成就做一番大事业。P101：本来是可以不用去的，大抱负、大气魄、大本事、大勇气。
+《知青岁月》P77：下去，能成就做一番大事业。P101：本来是可以不用去的，大抱负、大气魄、大本事、大勇气。
+
 
 
 #### 制定发展战略
