--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -140,6 +140,179 @@ P181：可不能贪污啊
 准备了 10 年。
 
 
+习主席 
+
+能做成的事。
+
+
+1、超过美国，实现中华民族的伟大复兴，中国梦。
+超过美国的意义很多人还没意识到，
+
+中国不是历史的主要的参与者，中国是最重要的参与者
+
+中国超过美国，而且超过美国之后，依然有着巨大的潜力。远远没有到 full-strength。9:42 
+
+马斯克说，中国以后 GDP 会两倍于美国，三倍也完全不意外。
+
+对我们国家来说，是超越了历史上所有的盛世，包括汉唐盛世，开创了一个伟大的时代；一个是，我们第一次成为一个世界大国，这是我自己的一个观点，我们原来有非常强盛的时候，但是影响主要是东亚和东南亚，对别的地方基本上没有什么影响。丝绸之路和郑和下西洋有些影响。因为还不知道地球是圆的。这次是真正意义上的世界大国。
+
+会被写入世界史，成为人类历史上最强盛的国家。超过所有，包括世界上的罗马帝国、大英帝国、美国。
+
+是过去 500 年阶段的一个终结，转到亚洲。
+
+我们都是见证者，不但是见证者，还是参与者。
+
+历来权力转换，都会伴随残酷的战争，死几千万几亿人都是完全有可能的事情
+
+有一个说法叫做“修昔底德陷阱”，就是修昔底德，2000 年前，我读过这本书，雅典和斯巴达，后来欧洲又发生了十几次，基本上都是战争。习主席说我们不认同国强必霸，我们不认同“修昔底德陷阱”。所以为什么各种打压，还在贸易谈判，买农产品，斗而不破。一个是我们最需要的是时间。
+
+有核武器，不好说。可能有局部，不太可能有热核大战。
+
+还是科技，人工智能是极为重要的一个方面
+
+
+2、一带一路，只有这一个战略，不会再有第二个战略了。
+丝绸之路开始于汉武帝
+海上丝绸之路开始于明成祖
+
+极其宏伟的计划
+
+真的是把整个世界当棋盘，运筹帷幄，纵横捭阖；要有极为开阔的视野，懂历史，懂现实，各种矛盾战争，中东、恐怖主义、美国破坏、规模宏大不成会有巨大的损失，要有魄力，有毅力
+
+如果能成，受益巨大
+
+，我们离伊朗是非常近的，几十公里，喀什直通印度洋
+
+这就是为了解决经济下行，中美摩擦而准备的，东南亚、非洲，自己内需。短短 5 年，新疆发展最快，每年 11%，然后是中部 6 省，河南是中枢，亚欧大陆桥。
+
+中巴经济走廊，瓜达尔港，中东石油少走一万多公里，绕过印度洋军事基地，绕过马六甲海峡。瓜多港离伊朗只有 50 多公里。进入非洲，进入欧洲，进入阿拉伯。
+
+喀什是第二大经济特区，喀什是亚欧大陆的地理中心，东西南北，如果建机场，到哪里都不难，喀什紧邻印度洋，纯内陆，但是连接印度洋，中国就成了印度洋国家。过巴基斯坦。出了瓜达尔港，可以连接欧洲、非洲。
+
+皎漂港，经常看到云南在山里用了多少年打通了隧道，多么艰难，就是在为此做准备。中南半岛经济走廊。过缅甸，发展云南、四川，连甘肃青海新疆，有亚欧大陆桥，中间还有河南，河南可以连东南沿海。全盘皆活。昆明，连接新加坡，重庆，连接长江经济带。长江连接印度洋。
+
+都是为了避开马六甲海峡，现在对马六甲海峡依赖过于严重，好像 80% 的进出口都是从这儿走的，在新加坡和马来西亚之间，可以看到对面的楼房，很窄。有美国的军事基地。不过我们在南海建了岛礁以后，马六甲海峡就在我们的飞机的作战半径之内了
+
+还有就是在积极拓展北极航线，因为全球变暖，冰雪融化，这已经成为了很现实的事情，会成为大国角逐的新的焦点，从俄罗斯北边去欧洲，比现在要近得多
+
+吉布提，红海，看看地图，是红海和亚丁湾之间的咽喉，红海的里面是苏伊士运河，出了苏伊士运河是地中海，地中海周边是欧洲、北非和中东，这是这些地方前往印度洋、东南亚、东亚国家的海上通道的必经之路
+
+斯里兰卡，港口
+
+希腊，港口
+
+
+海权论，马汉，美国就是按着这个思路做的，在所有重要的地方都建立了军事基地  
+
+我们是农业文明，重视土地，而且有乡土情结，故土难离，落叶归根，一直重陆权不重海权，
+
+这 500 多年，葡萄牙、西班牙、英国、法国、美国，建殖民地，海权优势
+
+还有一个陆权论，就是谁掌控了欧亚大陆的中心，谁就是世界霸主。打阿富汗的一个原因
+
+
+是不是把美国孤立了？本来最大优势，免于本土一战二战，坐收渔利。我们有十几个邻国，有些纠纷。美国北边加拿大一家人，墨西哥肯定不成威胁
+
+
+改变世界格局。超过汉武帝、明成祖、唐太宗。中国历史上最有成就的领导人。
+
+一带一路意义：
+（1）、产能过剩，顶级专家，非常可惜，培养很不容易。失业不但浪费人才，还会造成社会和政治问题。外国基础设施很差，既没有钱，也没有人才。双赢。
+（2）、东西部发展平衡。中国一个非常大的问题是东西部发展不均衡，继续拉大会动摇执政根基。西部大开发效果不明显。输血不如造血。一带一路一定会对沿途带来繁荣。
+（3）、人民币国际化，定价权。贷款用的是人民币。竞争低层次是产品，再往上是专利，再往上是定价权。一直吃了很多亏，买什么什么贵，卖什么什么便宜。
+（4）盟友。美国会组团围追堵截中国的发展。瓦解。加入我们。十几岁读罗斯福。
+（5）看似花钱，没有好处，自己经济增长在下降，为什么要花费那么多钱去外面投资？
+这就是为了解决经济下行而布置的，还好提前布局。中美贸易战很有信心，就是因为很早就布局了，东南亚、非洲，自己内需。短短 5 年，新疆发展最快，每年 11%，然后是中部 6 省，河南是中枢，亚欧大陆桥。
+（6）喀什是第二大经济特区，喀什紧邻印度洋，纯内陆，但是连接印度洋。过巴基斯坦。过缅甸，发展云南四川，连甘肃青海新疆，中间还有河南，河南可以连东南沿海。全盘皆活。可以连欧洲，中亚，非洲。中国就成了印度洋国家。
+（7）中巴经济走廊，中东石油少走一万多公里，绕过印度洋军事基地，绕过马六甲海峡。瓜多港离伊朗只有 50 多公里。进入非洲，进入欧洲，进入阿拉伯。
+（8）中南半岛经济走廊。昆明，连接新加坡，重庆，连接长江经济带。长江连接印度洋。
+（9）会创造 30 亿中产阶级。
+
+
+
+3、收复台湾
+在福建工作 17 年半，长期从事对台工作，肯定会完成这件事的。好像是去年，有一个《告台湾同胞书》40周年的讲话，好像是在这个讲话里，习主席说台湾的事不能再一代一代拖下去了。那意思就是要解决了
+一个有力证据，就是在大力发展海军。从 2013 年至今，每一年我们军舰下水吨位都超过世界其他国家的总和。好像是 25 万吨，什么概念呢？菲律宾去年新收了一艘 1000 吨的船，是他们 40 年来所接受的最大的吨位的船，大大提高了海军实力
+
+取消任期限制的原因之一，金灿荣老师在 14 年左右的演讲里提到过，内部演讲没有视频只有录音，说习主席是一定会解决台湾问题的，他当时说了一句话，他说第二任期解决不了，第三任期内一定会解决。当时都是骂他的，说他胡说八道，一共就两个任期，哪有第三任？后来我再去看，都是道歉的，说高人。
+
+完成祖国统一。比肩康熙大帝。
+
+
+4、发展海军，国防现代化。
+不应该视作理所当然，经济发展和军事发展之间没有必然的联系，宋朝，为了苟且偷安，一直在议和赔款，非常软弱
+
+海军，明成祖朱棣，不完全是，不是军事目的，但是实力非常强大
+
+台湾、南海、一带一路
+
+习主席有着非常强的忧患意识，强调底线思维，强调未雨绸缪，国家安全观。建国以来最大的最彻底的军改，动了很多高层，会就是在福建开的，在上杭县古田村。90 年前开过古田会议。
+
+习主席自己说，他看过很多近代史文件，总是痛彻心扉。
+
+我觉得这是发展军事的一个重要原因。
+
+从发展的势头看，肯定不只是收复台湾，因为收复台湾根本用不到这么多，以后肯定是走向深蓝的，就是会走向大洋深处
+
+为什么南海重要，如果打仗，最有可能的地方是南海，第二才是台海。打台湾，美国很可能不管，因为得不偿失。但是南海不一样，南海连接了太平洋和印度洋。不但牵扯大陆、美国、台湾，东南亚十几个国家，还是韩国和日本的贸易生命线，所以极其复杂
+
+填岛，金灿荣老师说，工程能力极强，一年比东南亚所有国家 40 年的总和还要多，查；一直不同意，习主席就同意了
+
+2016 年，南海仲裁案，美国派了两艘航母，十几艘水面舰艇，还有一些潜艇，监督执行，我们是北海东海南海舰队精锐尽出，东风导弹蓄势待发；是二战以后，除古巴导弹危机外，最接近核大战的时刻，后来美国跑了
+
+东海防空识别区，也是一直不同意，习主席同意了
+
+
+
+5、扶贫
+我们几千年的历史，除了近 20 年，其实大部分人的一辈子主要都是要解决吃饭问题，而不是现在经常说的买房问题
+看人民日报 20 年前，还是在报道温饱问题。
+中国历史上第一次消除绝对贫困。
+
+
+6、环保
+
+
+7、反腐
+写《康熙大帝》的二月河，是十九大代表，他说这样的力度，在《二十四史》中都没有过。
+
+我有很多原因，历史上都是因为腐败。还有一个原因，就是在为和美国斗争做准备。
+
+一个理由是，2013 年以后，我们对外贸的依赖占比是逐年下降的
+
+
+
+
+
+品质
+1、爱读书：大箱子，满床都是书，每天读书，油灯熏黑了，马克思、历史、政治、欧洲宗教史、战争史、罗斯福、美国。十几岁。
+2、能干肯干有办法：沼气燃料照明取暖、大坝良田冬天下水、10 分、200 斤、10 里地、种菜社科院、打井、办夜校讲故事、代销点、打铁社、送饭、缝纫社。
+3、饱经磨难：过四关，跳蚤、饮食、思想、劳动。文革下乡笑、找亲戚被赶出来、读父亲黑材料。一路上来经历不凡，肯定是承受了很多的痛苦。
+4、坚韧：水滴石穿，反腐、一带一路、扶贫、海军、大坝、入党 10 次，知道会被拒绝还是写。
+5、立志为人民：《为人民服务》、《岳阳楼记》、解决贫困问题。被接受，被爱护、送他上学。
+6、有远见持之以恒：功成不必在我、重视实际实干，不搞形式主义、环保、结构改革。
+7、重视调查：信息论，村乡县，正定福建上海。
+8、善良：粮票、大衣
+9、熟知中国所受的屈辱，志向。敬佩老一辈革命家。
+10、什么岗位都干过。
+
+
+
+
+为什么西藏重要
+1、没有西藏，无险可守，新疆一马平川
+2、所有的都成为前线，国防代价极大；云南、四川、青海、新疆，多么漫长 
+3、居高临下，控制南亚，中亚
+4、水源，长江、黄河、澜沧江（东南亚湄公河），失手极为危险
+5、2000 多年的历史证明，没有西藏就受不住新疆
+6、资源宝库
+
+
+
+
+
+
+
 
 
 ## 已经写了的
