--- a/pytorch/ch3/已完成.md
+++ b/pytorch/ch3/已完成.md
@@ -1,7 +1,24 @@
 
 
-### 第一个月
+### 第一个月；2020.09  
 
+1、读了一个阶段的论文，没有半途而废，很不简单  
+2、读完目标检测章节，看完 d2l 目标检测课程，过了一遍 SSD  
+3、把 4 个文件上传到 object-det  
+4、学会了 debug，解开了困扰 8 年的疑惑；  
+打开了读源码的大门，前景无限；  
+以后可以学习公司业务；  
+编程中 debug 时间最多；  
+不会 debug 根本就不可能学会编程  
+
+5、计时超过一百次，也就是完成了 100 次小任务  
+6、下载了屏蔽百度新闻广告的插件，再也不会受此影响，清净太多了。垃圾百度  
+7、计时超过两百次，也就是完成了 200 次小任务  
+8、计时超过三百次，也就是完成了 300 次小任务  
+9、看完了 YOLO 课程  
+10、C++ 第八章  
+11、C++ 第九章  
+12、计时超过四百次，也就是完成了 400 次小任务  
 
 
 
