--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,4 +1,19 @@
 
+
+## 已完成
+只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
+
+只关注 5 分钟算一个任务，每天都能完成几十个任务  
+
+不要小瞧小任务，习主席说，把正在做的事情做好，就是在报效国家，就是在为民族复兴做贡献  
+
+不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟  
+
+种一个土豆也是为国家做贡献  
+
+1、计时超过五百次，也就是完成了 500 次小任务  
+
+
 ### 失败清单，这个是提炼的精华，是金子
 1、吃饭没有看学习视频；如果不想看视频，就什么都不看   2 次 10 小时  
 2、失败的一个极为重要的原因，多次魔道，要使用库兹涅佐夫方法  
@@ -7,12 +22,7 @@
 
 
 ### 失败记录
-09.17：成功  
-09.18：因为百度新闻，去看了新闻，耽误一个小时。解决办法：下载了屏蔽百度新闻广告的插件，今后再也不会有这种情况。  
-09.20：吃饭看电影，耽误一个半小时    
-09.21：没有库兹涅佐夫  
-09.22：
-
+10.01：
 
 
 一定要解决学不动干什么的问题，每次都是因为这个问题，可能只有工作这个办法才能解决，业余时间做的事情都是零散的事，没有这个问题  
@@ -232,33 +242,6 @@ OpenCV
 ### 未完成的书
 歌德《浮士德》  
 达尔文《物种起源》  
-
-
-
-## 已完成
-只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
-
-只关注 5 分钟算一个任务，每天都能完成几十个任务  
-
-不要小瞧小任务，习主席说，把正在做的事情做好，就是在报效国家，就是在为民族复兴做贡献  
-
-不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟  
-
-种一个土豆也是为国家做贡献  
-
-1、读了一个阶段的论文，没有半途而废，很不简单  
-2、读完目标检测章节，看完 d2l 目标检测课程，过了一遍 SSD  
-3、把 4 个文件上传到 object-det  
-4、学会了 debug，解开了困扰 8 年的疑惑；打开了读源码的大门，前景无限；以后可以学习公司业务；编程中 debug 时间最多；不会 debug 根本就不可能学会编程  
-5、计时超过一百次，也就是完成了 100 次小任务  
-6、下载了屏蔽百度新闻广告的插件，再也不会受此影响，清净太多了。垃圾百度  
-7、计时超过两百次，也就是完成了 200 次小任务  
-8、计时超过三百次，也就是完成了 300 次小任务  
-9、看完了 YOLO 课程  
-10、C++ 第八章  
-11、C++ 第九章  
-12、计时超过四百次，也就是完成了 400 次小任务  
-13、
 
 
 
