--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -182,6 +182,8 @@ P181：可不能贪污啊
 
 丝绸之路开始于汉武帝
 
+最能展现雄韬伟略  
+
 真的是把整个世界当棋盘，运筹帷幄，纵横捭阖；要有极为开阔的视野，懂历史，懂现实，各种矛盾战争，中东、恐怖主义、美国破坏、规模宏大不成会有巨大的损失，要有魄力，有毅力
 
 我们离伊朗是非常近的，几十公里，喀什直通印度洋
@@ -200,7 +202,9 @@ P181：可不能贪污啊
 
 喀什是第二大经济特区，喀什是亚欧大陆的地理中心，东西南北，如果建机场，到哪里都不难，喀什紧邻印度洋，纯内陆，但是连接印度洋，中国就成了印度洋国家。过巴基斯坦。出了瓜达尔港，可以连接欧洲、非洲。
 
+
 皎漂港，经常看到云南在山里用了多少年打通了隧道，多么艰难，就是在为此做准备。中南半岛经济走廊。过缅甸，发展云南、四川，连甘肃青海新疆，有亚欧大陆桥，中间还有河南，河南可以连东南沿海。全盘皆活。昆明，连接新加坡，重庆，连接长江经济带。长江连接印度洋。
+
 
 都是为了避开马六甲海峡，现在对马六甲海峡依赖过于严重，好像 80% 的进出口都是从这儿走的，在新加坡和马来西亚之间，可以看到对面的楼房，很窄。有美国的军事基地。不过我们在南海建了岛礁以后，马六甲海峡就在我们的飞机的作战半径之内了
 
@@ -216,7 +220,7 @@ P181：可不能贪污啊
 
 海权论，马汉，美国就是按着这个思路做的，在所有重要的地方都建立了军事基地  
 
-我们是农业文明，重视土地，而且有乡土情结，故土难离，落叶归根，一直重陆权不重海权，
+我们是农业文明，重视土地，而且有乡土情结，故土难离，落叶归根，一直重陆权不重海权
 
 这 500 多年，葡萄牙、西班牙、英国、法国、美国，建殖民地，海权优势
 
@@ -232,53 +236,63 @@ P181：可不能贪污啊
 说的就是美国的地理位置  
 
 
+是不是对世界的发展有很大的好处，大家都有工作，去搞建设，而不是去当恐怖分子，是不是好事？
+
+
 改变世界格局。超过汉武帝、明成祖、唐太宗。中国历史上最有成就的领导人。
 
 
 3、收复台湾
+
+完成祖国统一。比肩康熙大帝。
+
 能提出“一带一路”这样宏大计划的人，肯定不会放过这个伟大的机会
+
 在福建工作 17 年半，长期从事对台工作，肯定会完成这件事的。好像是去年，有一个《告台湾同胞书》40周年的讲话，好像是在这个讲话里，习主席说台湾的事不能再一代一代拖下去了。那意思就是要解决了
 
 是必然要求，不论是政治上、文化上、情感上，还是国家发展，经济利益上，收回台湾都是必然选择。不收回台湾，福建就不能充分发展，福建现在还承担了很大的边防任务。一个是不收回台湾，我们就没那么容易进入太平洋。
 
 
-一个有力证据，就是在大力发展海军。从 2013 年至今，每一年我们军舰下水吨位都超过世界其他国家的总和。好像是 25 万吨，什么概念呢？菲律宾去年新收了一艘 1000 吨的船，是他们 40 年来所接受的最大的吨位的船，大大提高了海军实力
+一个有力证据，就是在大力发展海军。从 2013 年至今，每一年我们军舰下水吨位都超过世界其他国家的总和。好像是 25 万吨，什么概念呢？菲律宾去年新收了一艘 1000 吨的船，是他们 40 年来所接受的最大的吨位的船，大大提高了海军实力。台湾 2018 年吨位增加是 35 吨。
 
 取消任期限制的原因之一，金灿荣老师在 14 年左右的演讲里提到过，内部演讲没有视频只有录音，说习主席是一定会解决台湾问题的，他当时说了一句话，他说第二任期解决不了，第三任期内一定会解决。当时都是骂他的，说他胡说八道，一共就两个任期，哪有第三任？后来我再去看，都是道歉的，说高人。
 
-完成祖国统一。比肩康熙大帝。
+
 
 
 4、发展军事，我主要说海军
 
 不应该视作理所当然，经济发展和军事发展之间没有必然的联系，宋朝，为了苟且偷安，一直在议和赔款，非常软弱
 
-海军，明成祖朱棣，不完全是，不是军事目的，但是实力非常强大
-
-台湾、南海、一带一路
-
-习主席有着非常强的忧患意识，强调底线思维，强调未雨绸缪，国家安全观。建国以来最大的最彻底的军改，动了很多高层，会就是在福建开的，在上杭县古田村。90 年前开过古田会议。
+习主席有着非常强的忧患意识，强调底线思维，强调未雨绸缪，国家安全观。建国以来最大的最彻底的军改，动了很多高层，军改历来是非常困难的。会就是在福建开的，在上杭县古田村。90 年前开过古田会议。
 
 习主席自己说，他看过很多近代史文件，总是痛彻心扉。
 
 我觉得这是发展军事的一个重要原因。
 
+海军，明成祖朱棣，不完全是，不是军事目的，但是实力非常强大
+
+台湾、南海、一带一路，保护海外利益
+
 从发展的势头看，肯定不只是收复台湾，因为收复台湾根本用不到这么多，以后肯定是走向深蓝的，就是会走向大洋深处
 
-为什么南海重要，如果打仗，最有可能的地方是南海，第二才是台海。打台湾，美国很可能不管，因为得不偿失。但是南海不一样，南海连接了太平洋和印度洋。不但牵扯大陆、美国、台湾，东南亚十几个国家，还是韩国和日本的贸易生命线，所以极其复杂
+南海是极其重要的，如果打仗，最有可能的地方是南海，第二才是台海。打台湾，美国很可能不管，因为得不偿失。但是南海不一样，南海连接了太平洋和印度洋。不但牵扯大陆、美国、台湾，东南亚十几个国家，还是韩国和日本的贸易生命线，所以极其复杂
 
-填岛，金灿荣老师说，工程能力极强，一年比东南亚所有国家 40 年的总和还要多，查；一直不同意，习主席就同意了
+不过我们在南海建了岛礁以后，马六甲海峡就在我们的飞机的作战半径之内了
+
+填岛，原来别的国家一直建岛，我们海军也想建，但是中央一直不批，习主席就同意了，金灿荣老师说，工程能力极强，南海周边国家 45 年建的总和是 100 英亩，我们一年半建 3200 英亩，速度是他们的 1000 倍
+
+东海防空识别区，也是一直不同意，习主席同意了，原来日本画到上海旁边了，我们是对等花到日本旁边了
 
 2016 年，南海仲裁案，美国派了两艘航母，十几艘水面舰艇，还有一些潜艇，监督执行，我们是北海东海南海舰队精锐尽出，东风导弹蓄势待发；是二战以后，除古巴导弹危机外，最接近核大战的时刻，后来美国跑了
 
-东海防空识别区，也是一直不同意，习主席同意了
 
 
 
 5、扶贫
 我们几千年的历史，除了近 20 年，其实大部分人的一辈子主要都是要解决吃饭问题，而不是现在经常说的买房问题
 看人民日报 20 年前，还是在报道温饱问题。
-中国历史上第一次消除绝对贫困。
+中国历史上第一次消除绝对贫困
 
 
 6、环保
@@ -293,6 +307,10 @@ P181：可不能贪污啊
 
 
 8、疫情，从来没成功过，我看历史都是十室九空，累累白骨，这种百年一遇的瘟疫是要死很多人人的，几千万几亿都是常有的事，张文宏医生说，创造了传染病史上的奇迹。封城这么大的事只有他能拍板，没人知道会有什么后果，1000 多万人，李代默
+
+
+9、
+
 
 
 
