--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -1,4 +1,53 @@
 
+
+《在正定》
+82 年到 85 年，第一年副书记，第二年转任书记；82 年 29 岁，和我现在一个年纪，我现在还是一事无成，就更能体会到多么了不起了。  
+
+王幼辉，第一次见面，当兵的，大官子弟 P26；  
+嘱咐，不要说父亲名字 P29；
+为什么不发展旅游呢？P35；  
+保护石碑 P35；  
+他去了习主席家，说非常简朴，客厅，电视都没有，除了一张旧沙发啥都没有；吃了陕西的米粉儿面，喝了一碗鸡汤，汤很淡，估计是一只鸡炖了一大锅水；非常简朴
+有一次去厦门，去看他，问彭老师在哪里演出？说是读硕士研究生了，是第一位；看过一篇文章，说当时打电话，说拿到了学位证书了，习主席说好，彭老师说你怎么不祝贺我呢？习主席说，我这里还有很多研究生等着我安置工作呢。  
+P67 蹲着吃饭，有十几个人都说过，这个最典型；  
+
+
+
+
+1、做成的事：战略“半城郊型”，现在还在发挥指导作用 P4；没人搞过战略，没有从长远想过 P57； 29 岁；原来只种粮食，单一农业县；  
+解决负担过重问题，农作物调整，148 增加到 400 多；  
+试行“大包干”，全省第一； 
+“人才九条”，太超前，不敢登；内容；现在也要这样；  
+大宝SOD蜜；  
+招了个能人，油泵油嘴厂；  
+修垃圾池，公共厕所，文化站，俱乐部，自来水；  
+提高老师待遇；  
+修缮教学楼，1020间，买桌椅 3000 套，盖教学楼；  
+修建荣国府，P21；反对 300 万风险太大，收不回来要承担责任；第一年就收回来了，30 多年了，不知道多少倍了；目光长远，西湖 P36；  
+骑自行车，P21；  
+做事干一件成一件，P22；  
+第一个通公共汽车的县，方便出行，方便旅游；  
+连茅圈，不急功近利；  
+玛钢提高技术含量，从石家庄请人；  
+请专家指导农业种植；  
+
+重修大佛寺；  
+正定乒乓球基地；  
+
+
+
+能团结人，P 60 后半段就行，是最顺当的时期；  
+能未雨绸缪 P61；  
+
+
+P75 读书到 12 点；  
+P80 重视信访工作，开着门，谁来都可以；  
+
+
+
+
+
+
 ### 管理清单习主席  
 时政只读习主席的书，读的时候真心相信，原因主要有几点：  
 
