--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -3,48 +3,55 @@
 《在正定》
 82 年到 85 年，第一年副书记，第二年转任书记；82 年 29 岁，和我现在一个年纪，我现在还是一事无成，就更能体会到多么了不起了。  
 
-王幼辉，第一次见面，当兵的，大官子弟 P26；  
-嘱咐，不要说父亲名字 P29；
-为什么不发展旅游呢？P35；  
-保护石碑 P35；  
+王幼辉，第一次见面，当兵的，大官子弟 P26；P284 本来以为官架子很大；嘱咐，不要说父亲名字 P29；P295 有一些人，不知道，慢慢听说了，试探打听；    
+
 他去了习主席家，说非常简朴，客厅，电视都没有，除了一张旧沙发啥都没有；吃了陕西的米粉儿面，喝了一碗鸡汤，汤很淡，估计是一只鸡炖了一大锅水；非常简朴
-有一次去厦门，去看他，问彭老师在哪里演出？说是读硕士研究生了，是第一位；看过一篇文章，说当时打电话，说拿到了学位证书了，习主席说好，彭老师说你怎么不祝贺我呢？习主席说，我这里还有很多研究生等着我安置工作呢。  
-P67 蹲着吃饭，有十几个人都说过，这个最典型；  
+
+党风建设；P67 自身硬，蹲着吃饭，有十几个人都说过，这个最典型；P297 生活简单，热水放酱油就是了；P298 硬菜，不吃，后来风气好转；P201 说贪污气氛，深恶痛绝；P227 想把妻子调任到机关，按规矩办，想想也是应该这样；P118 总书记以后，任何人不能以他的旗号干私事；    
 
 
-
-
-1、做成的事：战略“半城郊型”，现在还在发挥指导作用 P4；没人搞过战略，没有从长远想过 P57； 29 岁；原来只种粮食，单一农业县；  
-解决负担过重问题，农作物调整，148 增加到 400 多；  
+做成的事：
+P209 来了 3 个月，不表态，调查情况，不打招呼；骑自行车，省油，P21；；走遍了所有的村；说过县委书记村，市委书记乡镇，省委书记县；信息论，定理，知己知彼，百战不殆，情报重要；
+战略“半城郊型”，现在还在发挥指导作用 P4；没人搞过战略，没有从长远想过 P57；P126 不能朝令夕改； 29 岁；原来只种粮食，单一农业县；P124 不允许种菜，拔掉；  
+解决负担过重问题，农作物调整，148 增加到 400 多；P131 他说宁可不要桂冠，也要过好日子；  
 试行“大包干”，全省第一； 
-“人才九条”，太超前，不敢登；内容；现在也要这样；  
-大宝SOD蜜；  
-招了个能人，油泵油嘴厂；  
-修垃圾池，公共厕所，文化站，俱乐部，自来水；  
-提高老师待遇；  
-修缮教学楼，1020间，买桌椅 3000 套，盖教学楼；  
-修建荣国府，P21；反对 300 万风险太大，收不回来要承担责任；第一年就收回来了，30 多年了，不知道多少倍了；目光长远，西湖 P36；  
-骑自行车，P21；  
-做事干一件成一件，P22；  
+“人才九条”，是一个求贤若渴的人，太超前，不敢登；内容；县领导 60% 的粗粮，40% 的细粮，人才全部细粮；现在也要这样；  甚至规定了送粮入户，搬煤入屋；
+效果：P174；  
+招了个能人，油泵油嘴厂；P186 很多人告状污蔑；  
+大宝SOD蜜；很感动，半夜来；  
+玛钢提高技术含量，从石家庄请人；  
+请专家指导农业种植；P351 自己对棉花特别懂，问的都是专业问题；学种棉花；读的书有《棉花种植》；  
+P303 看望留学生；
+重修大佛寺，P229 原来风吹雨打，没人管理，调查，刷漆，栏杆，登记，P270 为了解决资金短缺，不知道跑了多少趟；为什么不发展旅游呢？P35；保护石碑 P35；P128 当做“四旧”，说都是国宝(P247 保护不好就是罪人)，对得起祖先和后人；    
+前天开政治局会议，就是学习考古工作，既是重大文化人物，也是重大政治任务；现在随着信息技术的快速发展，世界上各种思潮激烈碰撞，文化就是根基；可以培养国家认同；美国吸引了全世界的人才，有一个就是靠好莱坞大片；  
+修建荣国府，P21，陈晓旭版；反对 300 万风险太大(大佛寺 5 分钱)，收不回来要承担责任；第一年就收回来了，30 多年了，不知道多少倍了；目光长远，西湖 P36；  
+提高老师待遇；P152 对不起你们的子弟；修缮教学楼，1020间，买桌椅 3000 套，盖教学楼；P107 办了 32 所学校；    
+正定乒乓球基地，上学的时候就听说过，在周围名气很大的；P316 当即办理老师涨工资；P318 目光长远，村里狭窄，发展有限；  
+常山公园，原来是个臭水坑，有了休闲娱乐的地方；修垃圾池，公共厕所，文化站，俱乐部，自来水；  
+
+做事干一件成一件，P22；P158 有个人说，既有战略眼光，又有务实精神，很了不起；  
 第一个通公共汽车的县，方便出行，方便旅游；  
 连茅圈，不急功近利；  
-玛钢提高技术含量，从石家庄请人；  
-请专家指导农业种植；  
 
-重修大佛寺；  
-正定乒乓球基地；  
+编县志，经常读，到福建哪个县都是如此；P248 从博物馆借书；  
 
-
-
-能团结人，P 60 后半段就行，是最顺当的时期；  
+P114 人力资源部，在考察，很多人推荐；有大局观，谈正定发展；  
+能团结人，P 60 后半段就行，是最顺当的时期；P221 周而不比； P192 说虽然累，但是有成就感，充实； 
 能未雨绸缪 P61；  
+P148 开会太多，减轻负担；  
+P176 贾大山，嘴上没毛的人来管我们；P209 谈天说地；  
+
+P75 读书到 12 点，读到两三点也是常有的；P155 记者，说他读的书让人望尘莫及；P156 读武侠小说；P217 什么都懂，年纪相当，但是望尘莫及；记忆力惊人，看过不忘，不少人都说过这个问题；    
+P240 工作量惊人，上厕所看到灯还亮着，睡醒了起来，他还没睡，来了专家，彻夜长谈；县里谁不知道书记从来没 12 点之前睡过；P302 案无积卷事不过夜；
+P80 重视信访工作，开着门，谁来都可以；P198 赶集的时候在街上摆桌子；所有的来信都会看，如果看新闻经常看到回信；P228 工作效率高，当场拍板；  
 
 
-P75 读书到 12 点；  
-P80 重视信访工作，开着门，谁来都可以；  
+善良：P241 下去调查，20 块钱；P289 火车帮助两个小孩儿，只写哭、帮助、没说、自己找到了县里才知道；P200 福建，自己没花过钱，还要借秘书的；  
+
+看球，开始说，后来关门了，也就不说了；
 
 
-
+P218 本来可以不受这些苦的，可以享受，他说那是平庸的追求，自己是准备入苦海的；P237 印象最深的一句话，早已经以身许国了，30多年过去了，越来越能感受到分量；  
 
 
 
@@ -62,9 +69,9 @@ P80 重视信访工作，开着门，谁来都可以；
 
 
 读《知青岁月》等四本书，最后调整顺序。  
-1、调查实际。走遍了所有的村，所有的乡镇，所有的县。  
-2、志向远大，雄心壮志；大格局，从后往前想，军队建设、海军、  
-3、制定发展战略，厦门制定计划，正定制定计划。  
+1、调查实际。信息论。走遍了所有的村，所有的乡镇，所有的县。  
+2、制定发展战略，厦门制定计划，正定制定计划。  
+3、
 4、居安思危，底线思维。  
 5、重视人才，正定人才九条。  
 6、狠抓落实，执行力极强。真正的落实。  
