--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -7,11 +7,13 @@
 
 不要小瞧小任务，习主席说，把正在做的事情做好，就是在报效国家，就是在为民族复兴做贡献  
 
-不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟  
+不要小瞧 5 分钟，乘以 3 就是 15 分钟，乘以 4 就是 20 分钟，乘以 16 就是 80 分钟  
 
 种一个土豆也是为国家做贡献  
 
-1、计时超过五百次，也就是完成了 500 次小任务  
+1、计时超过五百次，完成了 500 次小任务  
+2、计时超过五百五十次，完成了 550 次小任务  
+
 
 
 ### 失败清单，这个是提炼的精华，是金子
@@ -242,8 +244,6 @@ OpenCV
 ### 未完成的书
 歌德《浮士德》  
 达尔文《物种起源》  
-
-
 
 
 <br>
