--- a/pytorch/ch2/李航《统计学习方法》重要公式.md
+++ b/pytorch/ch2/李航《统计学习方法》重要公式.md
@@ -1,21 +1,35 @@
 
+成不了最聪明的人，但是可以成为抄公式最多的人。  
+
+抄公式，付出极少，收获极大，极为有效  
+
+这个是关键所在，总是记不住，抄个百八十遍肯定就记住了  
+
 抄很多遍，抄 100 遍还还记不住？再记不住就抄 1000 遍  
 
 要背诵一些基础知识点，否则一直浮于表面，细节不清晰，用的时候力不从心  
 
 理解了的道理而没有牢记下来就不能称其为知识————但丁《神曲》  
 
-就可劲儿抄去吧，这是最容易，最轻松的事了，很享受这个过程  
+就可劲儿抄去吧，这是最容易，最轻松的事了，很享受这个过程，就是一种休息    
 
 这个方法可以有效弥补自己只观大略造成的根不深，细节不清晰的问题，又极为简单，所以极好  
-
-
 
 重要公式：
 
 P14 贝叶斯公式  
 P35 (2.1) 感知机模型  
 P50 (3.1) K 近邻模型  
-P62 算法 4.1 和例 4.1. 朴素贝叶斯算法  每次抄一遍就行，抄很多次  
+P62 算法 4.1 和例 4.1. 朴素贝叶斯算法；每次抄一遍就行，抄很多次  
+
+#### 《决策树》
+P73 自己的笔记，(5.5)条件熵；理解了熵和条件熵就掌握了决策树和集成算法的核心内容，看例题公式就清清楚楚  
+P74 算法 5.1  
+P75 例 5.2  
+P76 信息增益比  
+P82 算法 5.5，结合 P168 例 8.2  
+P83 基尼指数 (5.22)(5.24)(5.25)  
+
+P90 LR 公式  
 
 
