Update and rename 李航《统计学习方法》重要公式.md to 每天抄公式.md

--- a/pytorch/ch2/每天抄公式.md
+++ b/pytorch/ch2/每天抄公式.md
@@ -1,4 +1,8 @@
 
+每天起床第一件事就是公式，用抄公式学会机器学习    
+10.07：
+
+
 成不了最聪明的人，但是可以成为抄公式最多的人。  
 
 抄公式，付出极少，收获极大，极为有效  
@@ -33,3 +37,4 @@ P83 基尼指数 (5.22)(5.24)(5.25)
 P90 LR 公式  
 
 
+要抄写的内容：面试常问的问题、李航统计学习方法、周志华机器学习、论文、  
