--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -1,14 +1,15 @@
 
+
 《在厦门》
 1985 年 6 月到 1988 年 6 月担任厦门副市长，到厦门那天，正好是他 32 岁生日。
 
 生日应该是在端午节。
 
-P2 条件有限，吃了海蛎煎、炒面线、土笋冻。代替很简单。  
+P2 条件有限，吃了海蛎煎、炒面线、土笋冻。用炒面线代替面条，海蛎煎里有鸡蛋，很简单。  
 
 项南秘书通知，会来看他；
 
-到了就下去调查 P78 第一年不熟悉，三分之一的时间都用在了调查上；P33 军营村；P78 “武夷”牌自行车，递烟，泡茶，西瓜，P50 别人怕脏，自带水杯，习主席不在乎，拿起来就喝；  
+到了就下去调查 P78 第一年不熟悉，三分之一的时间都用在了调查上；P78 “武夷”牌自行车，递烟，泡茶，有茶垢，黑不溜秋，西瓜，P50 别人怕脏，自带水杯，习主席不在乎，拿起来就喝；P33 军营村；  
 
 他说，这是我第一次走上市级领导岗位，非常辛苦的学习过程。
 
@@ -16,7 +17,7 @@ P134 编写县志，基本上重视县志的没有过，在正定编过一本；
 
 P9 走访老干部；正定也是看望老干部，给他们用车，走的时候都依依不舍，说这样的后生，难找。P97 唯一一位到家的市级领导；
 
-当时厦门经济特区刚起步，还是一座偏僻小城。只有几条街，人口才 28 万；经常停水停电；  
+
 
 厦门1985-2000发展战略，是中国地方政府最早编制的 15 年发展战略规划。也是请了北京的专家、和厦门的干部群众；P61 也是工作多年，从来没有过发展战略，也没人想过发展战略；
 
@@ -27,27 +28,33 @@ P67 功成不必在我，长远，别人搞出成绩来；
 P93 不要为了发展经济，光搞外向型经济，要注意社会稳定；
 
 
-1985 年建造信息中心，马云第一次接触互联网是 1995 年，如果习主席去创业，能取得多大成功？P55 别人就是建机厂，习主席有过人之处；  
-
-P71 和省里的政策谈不好，应该顾大局；
+当时厦门经济特区刚起步，还是一座偏僻小城。只有几条街，人口才 28 万；经常停水停电；  
 
 P93 水质好，本来想做矿泉水，价值低； P159 啤酒厂，P103；P38 轮胎厂；P39 厦航；P91 厦门国际银行；P90 道路工程；引进外资；P157 大力发展养殖业；   
 
+1985 年建造信息中心，马云第一次接触互联网是 1995 年，如果习主席去创业，能取得多大成功？P55 别人就是建机场，习主席有过人之处；  
+
+P71 和省里的政策谈不好，应该顾大局；
+
 保护环境，P28 筼筜湖；P62 只注重经济，哪会考虑生态环境？  
 
+
+
 P85 从来不送礼，从来不收礼；  
-
-彭老师：P30 结婚，没有仪式；采访说不再一起的时候多，就每天要打一个电话，十几年一直如此。P170 很崇拜；最后还是母亲看到的；  
-
-爱读书：P106 习主席说爱读书，另一个说他也下过乡，就完全没心思读书，可见意志力非常强；
-
-做事认真，P203 做秘书，虽然对北京很熟，但是还是会提前走一趟，怕修路或者改路了，耽误首长时间；  
 
 P93 去办事，被晾在了一边；  
 
 认识他父亲，P186 起粪；  
 
+爱读书：P106 习主席说爱读书，另一个说他也下过乡，就完全没心思读书，可见意志力非常强；
 
+
+做事认真，P203 做秘书，虽然对北京很熟，但是还是会提前走一趟，怕修路或者改路了，耽误首长时间；  
+
+
+彭老师：P30 结婚，没有仪式；采访说不再一起的时候多，就每天要打一个电话，十几年一直如此。P170 很崇拜；最后还是母亲看到的；  
+
+一些家庭小故事：http://henan.people.com.cn/n/2014/1130/c351638-23058370-3.html  
 
 
 ### 管理清单习主席  
