--- a/pytorch/ch3/习主席清单.md
+++ b/pytorch/ch3/习主席清单.md
@@ -29,7 +29,7 @@
 读《知青岁月》等四本书，最后调整顺序。  
 1、调查实际。信息论。走遍了所有的村，所有的乡镇，所有的县。  
 2、制定发展战略，厦门制定计划，正定制定计划。  
-3、
+3、具体事情上，所有考虑机会成本的做法都是非常优美的。大的事情上，有长远规划和大局意识的做法都是气势恢宏的。
 4、居安思危，底线思维。  
 5、重视人才，正定人才九条。  
 6、狠抓落实，执行力极强。真正的落实。  
