--- a/pytorch/ch2/深度学习.md
+++ b/pytorch/ch2/深度学习.md
@@ -6,7 +6,7 @@
 
 #### Batch Norm  
 
-#### RNN 原理，RNN 为什么难以训练，
+#### RNN、LSTM 推导，梯度问题。 RNN 原理，RNN 为什么难以训练，
 
 #### LSTM 是怎么改进的，LSTM有几个门？各个门的作用是什么？公式是什么？LSTM解决了什么问题、画一下LSTM结构图、
 
